Try changing title and subheading

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Hacky Hour by westarete</title>
+    <title>Hacky Hour - A Weekly Developer Meetup for Penn State and State College, PA</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
         <h1>Hacky Hour</h1>
-        <h2>Public website for hackyhour.com, created with GitHub Pages</h2>
+        <h2>A Weekly Developer Meetup for people around Penn State and State College, PA</h2>
         <a href="https://github.com/westarete/hackyhour" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
