Restore some code for the sidebar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       <div class="inner">
         <h1>Hacky Hour</h1>
         <h2>A fun, informal weekly meetup for all computer programmers in Happy Valley, from the amateur to the professional.</h2>
-        <img src="images/westarete.png" width="200px" style="float: right;" />
       </div>
     </header>
 
@@ -37,6 +36,11 @@
             Every Thursday evening from 5:30pm-8pm @ New Leaf Initiative.
           </p>
         </section>
+
+        <aside id="sidebar">
+          <a href="http://westarete.com"><img src="images/westarete.png" width="200px" /></a>
+        </aside>
+
       </div>
     </div>
 
