Get sponsors and rsvp button going

--- a/index.html
+++ b/index.html
@@ -35,15 +35,27 @@
             something new. And at the very least, there will be punch and pie. It's free.
             Every Thursday evening from 5:30pm-8pm @ New Leaf Initiative.
           </p>
+
+          <p>
+            <a href="http://www.meetup.com/Hacky-Hour/events/194155832/" data-event="194155832" class="mu-rsvp-btn">RSVP</a>
+          </p>
         </section>
 
         <aside id="sidebar">
+          <h3>Organized by</h3>
           <a href="http://westarete.com"><img src="images/westarete.png" width="200px" /></a>
+
+          <hr />
+
+          <h3>In partnership with</h3>
+          <a href="http://innoblue.org"><img src="images/innoblue.png" width="200px" /></a>
+
         </aside>
 
       </div>
     </div>
 
+    <!-- Google Analytics -->
     <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
       document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -54,6 +66,9 @@
       pageTracker._trackPageview();
       } catch(err) {}
     </script>
+
+    <!-- Meetup -->
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://secure.meetup.com/script/217965377037627760507776/api/mu.btns.js?id=j6tbeimtahp4i9c8ph37a60pt8";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
 
   </body>
 </html>
