Better link to meetup group

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
@@ -19,6 +20,7 @@
   <body>
     <header>
       <div class="inner">
+        <a href="http://www.meetup.com/Hacky-Hour/" class="btn btn-success btn-lg rsvp">RSVP on Meetup.com</a>
         <h1>Hacky Hour</h1>
         <h2>A fun, informal weekly meetup for all computer programmers in Happy Valley, from the amateur to the professional.</h2>
       </div>
@@ -36,9 +38,6 @@
             Every Thursday evening from 5:30pm-8pm @ New Leaf Initiative.
           </p>
 
-          <p>
-            <a href="http://www.meetup.com/Hacky-Hour/events/194155832/" data-event="194155832" class="mu-rsvp-btn">RSVP</a>
-          </p>
         </section>
 
         <aside id="sidebar">
@@ -66,9 +65,6 @@
       pageTracker._trackPageview();
       } catch(err) {}
     </script>
-
-    <!-- Meetup -->
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://secure.meetup.com/script/217965377037627760507776/api/mu.btns.js?id=j6tbeimtahp4i9c8ph37a60pt8";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
 
   </body>
 </html>
