Add directions and a map

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>Every Thursday from 5:30pm - 8pm<br>@ New Leaf Initiative</h3>
+          <h2>When: Every Thursday from 5:30pm - 8pm</h2>
+          <h2>Where: New Leaf Initiative</h2>
+
 
           <p>Come out to Hacky Hour. You'll meet other cool developers. You'll learn about new languages, new tools, and new
             techniques. You can just hang out and code, or you can pair up with someone on a project. Maybe you'll meet a
@@ -37,6 +39,14 @@
             something new. And at the very least, there will be punch and pie. It's free.
             Every Thursday evening from 5:30pm-8pm @ New Leaf Initiative.
           </p>
+
+          <h3>How do I get there?</h3>
+
+          <p>Hacky Hour is held at the beautiful <a href="http://newleafinitiative.org">New Leaf Initiative</a>
+            co-working space. It's on the 3rd floor of the State College Borough Building.</p>
+
+          <iframe width="600" height="250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=243%20S%20Allen%20St%2C%20State%20College%2C%20PA%2C%20United%20States&key=AIzaSyB4qYAZqwch6G5TIBtmiZvhPO_1AGj2y8k"></iframe>
+
 
         </section>
 
