Some more details

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
 
           <iframe width="600" height="250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=243%20S%20Allen%20St%2C%20State%20College%2C%20PA%2C%20United%20States&key=AIzaSyB4qYAZqwch6G5TIBtmiZvhPO_1AGj2y8k"></iframe>
 
+          <h3>What should I bring?</h3>
+
+          <p>Bring your laptop, so you can work on your project or show other people what you're working on.</p>
+
+          <h3>I was led to believe that there would be punch and pie.</h3>
+
+          <p>We will have some good snacks and drinks. It won't be a full dinner, but it will be enough to keep
+          everyone in a good mood. Feel free to bring your own food and drinks.</p>
+
+          <p><strong>No alcoholic beverages, please</strong> &mdash; we want to be welcoming to those who are under age
+           or do not drink, and it's against New Leaf's lease. When the festivities are over at 8pm, we imagine that
+          there will be informal groups heading out to any one of the other fine establishments downtown.</p>
+
 
         </section>
 
