More details about what it's like

--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
           <h2>When: Every Thursday from 5:30pm - 8pm</h2>
           <h2>Where: New Leaf Initiative</h2>
 
+          <h3>Why Hacky Hour?</h3>
 
-          <p>Come out to Hacky Hour. You'll meet other cool developers. You'll learn about new languages, new tools, and new
-            techniques. You can just hang out and code, or you can pair up with someone on a project. Maybe you'll meet a
-            collaborator for your project. Maybe you'll make the connection that leads to your next job. You'll probably learn
-            something new. And at the very least, there will be punch and pie. It's free.
-            Every Thursday evening from 5:30pm-8pm @ New Leaf Initiative.
-          </p>
+          <p>Over the past couple years of running meetups and working with developers, we realized that there are
+          probably <strong>close to 1,000</strong> software developers in the Happy Valley region, and they almost
+          never get together to hang out and hack. We wanted to provide a time and a space for that to happen.</p>
+
+          <h3>Is there any charge?</h3>
+
+          <p>Nope. It's free for all attendees.</p>
 
           <h3>How do I get there?</h3>
 
@@ -46,6 +48,19 @@
             co-working space. It's on the 3rd floor of the State College Borough Building.</p>
 
           <iframe width="600" height="250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=243%20S%20Allen%20St%2C%20State%20College%2C%20PA%2C%20United%20States&key=AIzaSyB4qYAZqwch6G5TIBtmiZvhPO_1AGj2y8k"></iframe>
+
+          <h3>What is the format?</h3>
+
+          <p>It's an informal meetup. New Leaf has couches, tables, conference rooms. People can use the time to
+            hang out with people that they know, meet new people, work with a pair on a project, or just on a couch and
+            code solo.
+          </p>
+
+          <h3>Will there be any talks?</h3>
+
+          <p>We envision that there will be small side talks at some of the upcoming events. And once in a while we'll
+          bring in a national speaker to talk to the entire audience. But organized talks will not be the normal focus
+          of the event &mdash; we prefer to keep it centered around small conversations and random meetings instead.</p>
 
           <h3>What should I bring?</h3>
 
