Add email for contact information

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
   <body>
     <header>
       <div class="inner">
-        <a href="http://www.meetup.com/Hacky-Hour/" class="btn btn-success btn-lg rsvp">RSVP on Meetup.com</a>
+        <aside>
+          <a href="http://www.meetup.com/Hacky-Hour/" class="btn btn-success btn-lg rsvp">RSVP on Meetup.com</a>
+          <div class="contact">
+            Email us:<br/>
+            <a href="mailto:hello@hackyhour.com">hello@hackyhour.com</a>
+          </div>
+        </aside>
         <h1>Hacky Hour</h1>
         <h2>A fun, informal weekly meetup for all computer programmers in Happy Valley, from the amateur to the professional.</h2>
       </div>
@@ -75,6 +81,9 @@
            or do not drink, and it's against New Leaf's lease. When the festivities are over at 8pm, we imagine that
           there will be informal groups heading out to any one of the other fine establishments downtown.</p>
 
+          <h3>How do I get in touch with the organizers?</h3>
+
+          <p>You can email us at <a href="mailto:hello@hackyhour.com">hello@hackyhour.com</a>.</p>
 
         </section>
 
