Add copyright notice to bottom

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
       </div>
     </div>
 
+    <footer>
+      <div class="legal">
+        &copy; Copyright 2014 <a href="http://westarete.com">West Arete Computing, Inc.</a>
+      </div>
+    </footer>
+
     <!-- Google Analytics -->
     <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
