Explain how the site was created and maintained

--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
            or do not drink, and it's against New Leaf's lease. When the festivities are over at 8pm, we imagine that
           there will be informal groups heading out to any one of the other fine establishments downtown.</p>
 
+          <h3>How did you create this site?</h3>
+
+          <p>You can get the source code <a href="https://github.com/westarete/hackyhour">on GitHub</a>. Feel free to send us issues and pull requests.</p>
+
+          <p>It was generated and deployed with <a href="https://pages.github.com/">GitHub Pages</a>, which makes
+          things very easy. Many websites for open source projects use this technique nowadays.</p>
+
           <h3>How do I get in touch with the organizers?</h3>
 
           <p>You can email us at <a href="mailto:hello@hackyhour.com">hello@hackyhour.com</a>.</p>
