--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <h3>What is the format?</h3>
 
           <p>It's an informal meetup. New Leaf has couches, tables, conference rooms. People can use the time to
-            hang out with people that they know, meet new people, work with a pair on a project, or just on a couch and
-            code solo.
+            hang out with people that they know, meet new people, work with a pair on a project, or just sit on a couch
+            and code solo.
           </p>
 
           <h3>Will there be any talks?</h3>
