Add mention of lightning talk

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
           <h3>Will there be any talks?</h3>
 
-          <p>We envision that there will be small side talks at some of the upcoming events. And once in a while we'll
+          <p>Our kickoff event on 9/24/15 will feature a series of lightning talks by local hackers who will tell us about their projects. And once in a while we'll
           bring in a national speaker to talk to the entire audience. But organized talks will not be the normal focus
           of the event &mdash; we prefer to keep it centered around small conversations and random meetings instead.</p>
 
