Add videon logo and link to sidebar

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 
           <h3>In partnership with</h3>
           <a href="http://innoblue.org"><img src="images/innoblue.png" width="200px" /></a>
+          <a href="http://videon-central.org"><img src="images/videon.png" width="200px" /></a>
+
 
         </aside>
 
