--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <hr />
 
           <h3>In partnership with</h3>
-          <a href="http://rowlandcreative.com"><img src="images/rowland.png" width="200px" /></a>
+          <a href="http://fliplearning.com"><img src="images/flip.png" width="200px" /></a>
           <a href="http://videon-central.com"><img src="images/videon.png" width="200px" /></a>
 
 
