Add flip logo and padding to logos

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
           <hr />
 
           <h3>In partnership with</h3>
-          <a href="http://fliplearning.com"><img src="images/flip.png" width="200px" /></a>
-          <a href="http://videon-central.com"><img src="images/videon.png" width="200px" /></a>
+          <div class="partner-logo"><a href="http://fliplearning.com"><img src="images/flip.png" width="200px" /></a></div>
+          <div class="partner-logo"><a href="http://videon-central.com"><img src="images/videon.png" width="200px" /></a></div>
 
 
         </aside>
