Add hackpsu logo to partners

--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
           <hr />
 
           <h3>In partnership with</h3>
-          <div class="partner-logo"><a href="http://fliplearning.com"><img src="images/flip.png" width="200px" /></a></div>
           <div class="partner-logo"><a href="http://videon-central.com"><img src="images/videon.png" width="200px" /></a></div>
+          <div class="partner-logo"><a href="http://fliplearning.com"><img src="images/flip.png" width="200px" /></a></div>
+          <div class="partner-logo"><a href="http://hackpsu.org"><img src="images/hackpsulogo.png" width="200px" /></a></div>
 
 
         </aside>
