Add text to homepage

--- a/index.html
+++ b/index.html
@@ -35,8 +35,17 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h2>When: Every Thursday from 5:30pm - 8pm</h2>
-          <h2>Where: New Leaf Initiative</h2>
+          <h2>When:</h2>
+          <p>Every Thursday from 5:30pm - 8pm</p>
+
+          <h2>Where:</h2>
+          <p>New Leaf Initiative on third floor of the State College Borough Municpal Building, 243 S.Allen St. in State College</p>
+
+          <h2>Who: Representatives from West Arête, Rowland Creative, Blue Mountain, Videon, Penn State, Innoblue, local entreprenuers and community members</h2>
+
+          <h2>What:</h2>
+
+          <p>Hacky Hour kicks off second year of events for local techies</p>
 
           <h3>Why Hacky Hour?</h3>
 
