Edit the "Who" section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
           <h2>Where:</h2>
           <p>New Leaf Initiative on third floor of the State College Borough Municpal Building, 243 S.Allen St. in State College</p>
 
-          <h2>Who: Representatives from West Arête, Rowland Creative, Blue Mountain, Videon, Penn State, Innoblue, local entreprenuers and community members</h2>
+          <h2>Who:</h2>
+
+          <p>Representatives from West Arête, Rowland Creative, Blue Mountain, Videon, Penn State, Innoblue, local entreprenuers and community members</p>
 
           <h2>What:</h2>
 
