--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <hr />
 
           <h3>In partnership with</h3>
-          <div class="partner-logo"><a href="http://rowlandcreative.com.com"><img src="images/rowlandcreative.png" width="200px" /></a></div>
+          <div class="partner-logo"><a href="http://rowlandcreative.com"><img src="images/rowlandcreative.png" width="200px" /></a></div>
           <div class="partner-logo"><a href="http://videon-central.com"><img src="images/videon.png" width="200px" /></a></div>
           <div class="partner-logo"><a href="http://fliplearning.com"><img src="images/flip.png" width="200px" /></a></div>
           <div class="partner-logo"><a href="http://hackpsu.org"><img src="images/hackpsulogo.png" width="200px" /></a></div>
