--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           <div class="partner-logo"><a href="http://videon-central.com"><img src="images/videon.png" width="200px" /></a></div>
           <div class="partner-logo"><a href="http://fliplearning.com"><img src="images/flip.png" width="200px" /></a></div>
           <div class="partner-logo"><a href="http://hackpsu.org"><img src="images/hackpsulogo.png" width="200px" /></a></div>
+          <div class="partner-logo"><a href="https://www.coolblue.com/"><img src="images/bluemountain.png" width="200px" /></a></div>
 
 
         </aside>
