Add link to lightning talks sign up form

--- a/index.html
+++ b/index.html
@@ -1,141 +1,167 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  <!--[if lt IE 9]>
+  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
-    <title>Hacky Hour - A Weekly Developer Meetup for Penn State and State College, PA</title>
-  </head>
+  <title>Hacky Hour - A Weekly Developer Meetup for Penn State and State College, PA</title>
+</head>
 
-  <body>
-    <header>
-      <div class="inner">
-        <aside>
-          <a href="http://www.meetup.com/Hacky-Hour/" class="btn btn-success btn-lg rsvp">RSVP on Meetup.com</a>
-          <div class="contact">
-            Email us:<br/>
-            <a href="mailto:hello@hackyhour.com">hello@hackyhour.com</a>
-          </div>
-        </aside>
-        <h1>Hacky Hour</h1>
-        <h2>Central Pennsylvania's only networking opportunity for the tech community is held weekly from 5:30-8 p.m. at New Leaf Initiative in State College.</h2>
+<body>
+<header>
+  <div class="inner">
+    <aside>
+      <a href="http://www.meetup.com/Hacky-Hour/" class="btn btn-success btn-lg rsvp">RSVP on Meetup.com</a>
+
+      <div class="contact">
+        Email us:<br/>
+        <a href="mailto:hello@hackyhour.com">hello@hackyhour.com</a>
       </div>
-    </header>
+    </aside>
+    <h1>Hacky Hour</h1>
 
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-          <h2>When:</h2>
-          <p>Every Thursday from 5:30pm - 8pm</p>
+    <h2>Central Pennsylvania's only networking opportunity for the tech community is held weekly from 5:30-8 p.m. at New
+      Leaf Initiative in State College.</h2>
+  </div>
+</header>
 
-          <h2>Where:</h2>
-          <p>New Leaf Initiative on third floor of the State College Borough Municpal Building, 243 S.Allen St. in State College</p>
+<div id="content-wrapper">
+  <div class="inner clearfix">
+    <section id="main-content">
 
-          <iframe width="600" height="250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=243%20S%20Allen%20St%2C%20State%20College%2C%20PA%2C%20United%20States&key=AIzaSyB4qYAZqwch6G5TIBtmiZvhPO_1AGj2y8k"></iframe>
+      <h2>Ligtning Talks!</h2>
 
-          <h2>Who:</h2>
+      <p>People want to hear about what you (yes, you) are working on! We're all hackers here, and we get our energy and
+        inspiration from seeing beginners and experts making progress on their ideas.</p>
 
-          <p>Representatives from West Arête, Rowland Creative, Blue Mountain, Videon, Penn State, Innoblue, local entreprenuers and community members</p>
+      <p>Stand up at our 9/24 kickoff event and show & tell your project. Bring your laptop so you can plug it into the
+        projector and give us a small demo. Strict 5-minute time limit!</p>
 
-          <h2>What:</h2>
+      <p>Click <a href="https://westarete.wufoo.com/forms/p1nx3plw0skd0cb/">HERE</a> to sign up.</p>
 
-          <p>Hacky Hour kicks off second year of events for local techies</p>
+      <h2>When:</h2>
 
-          <h3>Why Hacky Hour?</h3>
+      <p>Every Thursday from 5:30pm - 8pm</p>
 
-          <p>Over the past couple years of running meetups and working with developers, we realized that there are
-          probably <strong>close to 1,000</strong> software developers in the Happy Valley region, and they almost
-          never get together to hang out and hack. We wanted to provide a time and a space for that to happen.</p>
+      <h2>Where:</h2>
 
-          <h3>Is there any charge?</h3>
+      <p>New Leaf Initiative on third floor of the State College Borough Municpal Building, 243 S.Allen St. in State
+        College</p>
 
-          <p>Nope. It's free for all attendees.</p>
-          
-          <h3>What is the format?</h3>
+      <iframe width="600" height="250" frameborder="0" style="border:0"
+              src="https://www.google.com/maps/embed/v1/place?q=243%20S%20Allen%20St%2C%20State%20College%2C%20PA%2C%20United%20States&key=AIzaSyB4qYAZqwch6G5TIBtmiZvhPO_1AGj2y8k"></iframe>
 
-          <p>It's an informal meetup. New Leaf has couches, tables, conference rooms. People can use the time to
-            hang out with people that they know, meet new people, work with a pair on a project, or just sit on a couch
-            and code solo.
-          </p>
+      <h2>Who:</h2>
 
-          <h3>Will there be any talks?</h3>
+      <p>Representatives from West Arête, Rowland Creative, Blue Mountain, Videon, Penn State, Innoblue, local
+        entreprenuers and community members</p>
 
-          <p>Our kickoff event on 9/24/15 will feature a series of lightning talks by local hackers who will tell us about their projects. And once in a while we'll
-          bring in a national speaker to talk to the entire audience. But organized talks will not be the normal focus
-          of the event &mdash; we prefer to keep it centered around small conversations and random meetings instead.</p>
+      <h2>What:</h2>
 
-          <h3>What should I bring?</h3>
+      <p>Hacky Hour kicks off second year of events for local techies</p>
 
-          <p>Bring your laptop, so you can work on your project or show other people what you're working on.</p>
+      <h3>Why Hacky Hour?</h3>
 
-          <h3>I was led to believe that there would be punch and pie.</h3>
+      <p>Over the past couple years of running meetups and working with developers, we realized that there are
+        probably <strong>close to 1,000</strong> software developers in the Happy Valley region, and they almost
+        never get together to hang out and hack. We wanted to provide a time and a space for that to happen.</p>
 
-          <p>We will have some good snacks and drinks. It won't be a full dinner, but it will be enough to keep
-          everyone in a good mood. Feel free to bring your own food and drinks.</p>
+      <h3>Is there any charge?</h3>
 
-          <p><strong>No alcoholic beverages, please</strong> &mdash; we want to be welcoming to those who are under age
-           or do not drink, and it's against New Leaf's lease. When the festivities are over at 8pm, we imagine that
-          there will be informal groups heading out to any one of the other fine establishments downtown.</p>
+      <p>Nope. It's free for all attendees.</p>
 
-          <h3>How did you create this site?</h3>
+      <h3>What is the format?</h3>
 
-          <p>You can get the source code <a href="https://github.com/westarete/hackyhour">on GitHub</a>. Feel free to send us issues and pull requests.</p>
+      <p>It's an informal meetup. New Leaf has couches, tables, conference rooms. People can use the time to
+        hang out with people that they know, meet new people, work with a pair on a project, or just sit on a couch
+        and code solo.
+      </p>
 
-          <p>It was generated and deployed with <a href="https://pages.github.com/">GitHub Pages</a>, which makes
-          things very easy. Many websites for open source projects use this technique nowadays.</p>
+      <h3>Will there be any talks?</h3>
 
-          <h3>How do I get in touch with the organizers?</h3>
+      <p>Our kickoff event on 9/24/15 will feature a series of lightning talks by local hackers who will tell us about
+        their projects. And once in a while we'll
+        bring in a national speaker to talk to the entire audience. But organized talks will not be the normal focus
+        of the event &mdash; we prefer to keep it centered around small conversations and random meetings instead.</p>
 
-          <p>You can email us at <a href="mailto:hello@hackyhour.com">hello@hackyhour.com</a>.</p>
+      <h3>What should I bring?</h3>
 
-        </section>
+      <p>Bring your laptop, so you can work on your project or show other people what you're working on.</p>
 
-        <aside id="sidebar">
-          <h3>Organized by</h3>
-          <a href="http://westarete.com"><img src="images/westarete.png" width="200px" /></a>
+      <h3>I was led to believe that there would be punch and pie.</h3>
 
-          <hr />
+      <p>We will have some good snacks and drinks. It won't be a full dinner, but it will be enough to keep
+        everyone in a good mood. Feel free to bring your own food and drinks.</p>
 
-          <h3>In partnership with</h3>
-          <div class="partner-logo"><a href="http://rowlandcreative.com"><img src="images/rowlandcreative.png" width="200px" /></a></div>
-          <div class="partner-logo"><a href="http://videon-central.com"><img src="images/videon.png" width="200px" /></a></div>
-          <div class="partner-logo"><a href="http://fliplearning.com"><img src="images/flip.png" width="200px" /></a></div>
-          <div class="partner-logo"><a href="http://hackpsu.org"><img src="images/hackpsulogo.png" width="200px" /></a></div>
-          <div class="partner-logo"><a href="https://www.coolblue.com/"><img src="images/bluemountain.png" width="200px" /></a></div>
+      <p><strong>No alcoholic beverages, please</strong> &mdash; we want to be welcoming to those who are under age
+        or do not drink, and it's against New Leaf's lease. When the festivities are over at 8pm, we imagine that
+        there will be informal groups heading out to any one of the other fine establishments downtown.</p>
 
+      <h3>How did you create this site?</h3>
 
-        </aside>
+      <p>You can get the source code <a href="https://github.com/westarete/hackyhour">on GitHub</a>. Feel free to send
+        us issues and pull requests.</p>
 
+      <p>It was generated and deployed with <a href="https://pages.github.com/">GitHub Pages</a>, which makes
+        things very easy. Many websites for open source projects use this technique nowadays.</p>
+
+      <h3>How do I get in touch with the organizers?</h3>
+
+      <p>You can email us at <a href="mailto:hello@hackyhour.com">hello@hackyhour.com</a>.</p>
+
+    </section>
+
+    <aside id="sidebar">
+      <h3>Organized by</h3>
+      <a href="http://westarete.com"><img src="images/westarete.png" width="200px"/></a>
+
+      <hr/>
+
+      <h3>In partnership with</h3>
+
+      <div class="partner-logo"><a href="http://rowlandcreative.com"><img src="images/rowlandcreative.png"
+                                                                          width="200px"/></a></div>
+      <div class="partner-logo"><a href="http://videon-central.com"><img src="images/videon.png" width="200px"/></a>
       </div>
-    </div>
+      <div class="partner-logo"><a href="http://fliplearning.com"><img src="images/flip.png" width="200px"/></a></div>
+      <div class="partner-logo"><a href="http://hackpsu.org"><img src="images/hackpsulogo.png" width="200px"/></a></div>
+      <div class="partner-logo"><a href="https://www.coolblue.com/"><img src="images/bluemountain.png"
+                                                                         width="200px"/></a></div>
 
-    <footer>
-      <div class="legal">
-        &copy; Copyright 2014 <a href="http://westarete.com">West Arete Computing, Inc.</a>
-      </div>
-    </footer>
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-      try {
-        var pageTracker = _gat._getTracker("UA-426568-22");
-      pageTracker._trackPageview();
-      } catch(err) {}
-    </script>
+    </aside>
 
-  </body>
+  </div>
+</div>
+
+<footer>
+  <div class="legal">
+    &copy; Copyright 2014 <a href="http://westarete.com">West Arete Computing, Inc.</a>
+  </div>
+</footer>
+
+<!-- Google Analytics -->
+<script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+  try {
+    var pageTracker = _gat._getTracker("UA-426568-22");
+    pageTracker._trackPageview();
+  } catch (err) {
+  }
+</script>
+
+</body>
 </html>
