--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p>Stand up at our 9/24 kickoff event and show & tell your project. Bring your laptop so you can plug it into the
         projector and give us a small demo. Strict 5-minute time limit!</p>
 
-      <p>Click <a href="https://westarete.wufoo.com/forms/p1nx3plw0skd0cb/">HERE</a> to sign up.</p>
+      <p>Click <a href="https://westarete.wufoo.com/forms/p1nx3plw0skd0cb/" target="_blank">HERE</a> to sign up.</p>
 
       <h2>When:</h2>
 
@@ -109,10 +109,10 @@
 
       <h3>How did you create this site?</h3>
 
-      <p>You can get the source code <a href="https://github.com/westarete/hackyhour">on GitHub</a>. Feel free to send
+      <p>You can get the source code <a href="https://github.com/westarete/hackyhour" target="_blank">on GitHub</a>. Feel free to send
         us issues and pull requests.</p>
 
-      <p>It was generated and deployed with <a href="https://pages.github.com/">GitHub Pages</a>, which makes
+      <p>It was generated and deployed with <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>, which makes
         things very easy. Many websites for open source projects use this technique nowadays.</p>
 
       <h3>How do I get in touch with the organizers?</h3>
@@ -123,19 +123,19 @@
 
     <aside id="sidebar">
       <h3>Organized by</h3>
-      <a href="http://westarete.com"><img src="images/westarete.png" width="200px"/></a>
+      <a href="http://westarete.com" target="_blank"><img src="images/westarete.png" width="200px"/></a>
 
       <hr/>
 
       <h3>In partnership with</h3>
 
-      <div class="partner-logo"><a href="http://rowlandcreative.com"><img src="images/rowlandcreative.png"
+      <div class="partner-logo"><a href="http://rowlandcreative.com" target="_blank"><img src="images/rowlandcreative.png"
                                                                           width="200px"/></a></div>
-      <div class="partner-logo"><a href="http://videon-central.com"><img src="images/videon.png" width="200px"/></a>
+      <div class="partner-logo"><a href="http://videon-central.com" target="_blank"><img src="images/videon.png" width="200px"/></a>
       </div>
-      <div class="partner-logo"><a href="http://fliplearning.com"><img src="images/flip.png" width="200px"/></a></div>
-      <div class="partner-logo"><a href="http://hackpsu.org"><img src="images/hackpsulogo.png" width="200px"/></a></div>
-      <div class="partner-logo"><a href="https://www.coolblue.com/"><img src="images/bluemountain.png"
+      <div class="partner-logo"><a href="http://fliplearning.com" target="_blank"><img src="images/flip.png" width="200px"/></a></div>
+      <div class="partner-logo"><a href="http://hackpsu.org" target="_blank"><img src="images/hackpsulogo.png" width="200px"/></a></div>
+      <div class="partner-logo"><a href="https://www.coolblue.com/" target="_blank"><img src="images/bluemountain.png"
                                                                          width="200px"/></a></div>
 
 
