Remove additional 9/24 material

--- a/index.html
+++ b/index.html
@@ -51,15 +51,6 @@
       <iframe width="600" height="250" frameborder="0" style="border:0"
               src="https://www.google.com/maps/embed/v1/place?q=243%20S%20Allen%20St%2C%20State%20College%2C%20PA%2C%20United%20States&key=AIzaSyB4qYAZqwch6G5TIBtmiZvhPO_1AGj2y8k"></iframe>
 
-      <h2>Who:</h2>
-
-      <p>Representatives from West Arête, Rowland Creative, Blue Mountain, Videon, Penn State, Innoblue, local
-        entreprenuers and community members</p>
-
-      <h2>What:</h2>
-
-      <p>Hacky Hour kicks off second year of events for local techies</p>
-
       <h3>Why Hacky Hour?</h3>
 
       <p>Over the past couple years of running meetups and working with developers, we realized that there are
@@ -72,17 +63,11 @@
 
       <h3>What is the format?</h3>
 
-      <p>It's an informal meetup. New Leaf has couches, tables, conference rooms. People can use the time to
+      <p>Sometimes we have invited speakers, and sometimes we host workshops. But often, it's an informal meetup. 
+        New Leaf has couches, tables, conference rooms. People can use the time to
         hang out with people that they know, meet new people, work with a pair on a project, or just sit on a couch
         and code solo.
       </p>
-
-      <h3>Will there be any talks?</h3>
-
-      <p>Our kickoff event on 9/24/15 will feature a series of lightning talks by local hackers who will tell us about
-        their projects. And once in a while we'll
-        bring in a national speaker to talk to the entire audience. But organized talks will not be the normal focus
-        of the event &mdash; we prefer to keep it centered around small conversations and random meetings instead.</p>
 
       <h3>What should I bring?</h3>
 
